# finance

./: .analyzeignore  .cursorignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  auth.py  config.py  database.py  docker-compose.yml  dummy_data.py  email_utils.py  main.py  models.py  pyproject.toml  schema.py
.cursor/rules/: unit-testing-async.mdc  unit-testing.mdc
.github/prompts/: write-integration-tests.prompt.md  write-unit-tests.prompt.md
alembic/versions/: ab456f54db56_initial_schema.py
routes/: front_view.py  transactions.py  users.py
static/css/: styles.css
static/js/: account.js  auth.js  auth_forms.js  forgot_password.js  portfolio_pages.js  reset_password.js  utils.js
templates/: account.html  assets.html  error.html  forgot_password.html  home.html  layout.html  login.html  register.html  reset_password.html  transactions.html  user_home_page.html
templates/email/: reset_password.html
tests/: conftest.py
tests/helpers/: db_mocks.py
tests/unit_tests/: test_auth_email_password_utils.py  test_main.py  test_main_assets.py  test_schema_assets.py  test_schema_password_requests.py  test_users_password_flows.py
utils/: app_services.py  enums.py  error_messages.py  image_utils.py
