[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0.48",
    "pydantic[email]=2.12.5",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
]


[tool.black]
target-version = ["py312"]

