[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0.48",
    "pydantic[email]==2.12.5",
    "aiosqlite>=0.22.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pillow>=12.2.0",
    "aiosmtplib>=5.1.0",
    "pydantic-extra-types==2.11.0",
    "psycopg[binary]>=3.3.3",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.3"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
]


[tool.black]
target-version = ["py312"]

